--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   "dependencies": {
     "csv-parser": "^1.8.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Enet4/node-trec-eval-wrapper.git"
+  },
   "license": "MIT"
 }
